# Unint_Testing

./: README.md
ceedling/project/inc/: math.h
ceedling/project/src/: math.c
ceedling/test/: Script.cmd  project.yml
ceedling/test/test/: test_math.c
google_test/src/: math.cpp  math.hpp
google_test/test/: Script.cmd  test_math.cpp
google_test2/: CMakeLists.txt
google_test2/project/src/: calculator.cpp  calculator.h  main.cpp
google_test2/test/: CMakeLists.txt  test_calculator.cpp
